<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegistroActivity">

    <ImageView
        android:id="@+id/imageViewReg"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/balon" />

    <EditText
        android:id="@+id/editEmailReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_escribe_el_correo"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/editPassReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/editText_escribe_la_contrase_a"
        android:text="" />
    <EditText
        android:id="@+id/editPassConfirmReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/edittext_escribe_la_contrase_a_nuevamente"
        android:text="" />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrar" />
</LinearLayout>